# EasyARDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jokerpeng/demo/easyardemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: targets.json
app/src/main/cpp/: ar.cc  ar.hpp  helloar.cc  native-lib.cpp  renderer.cc  renderer.hpp
app/src/main/java/com/jokerpeng/demo/easyardemo/: GLView.java  MainActivity.java  Renderer.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/jokerpeng/demo/easyardemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
